<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Metropolis</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="search">Search</string>
    <string name="lessThan">></string>

    <color name="feed_bg">#d3d6db</color>
    <color name="timestamp">#a0a3a7</color>

    <string name="facebook_app_id">803084253084056</string>
    <string name="lordVoldemortItem">Voldemort\'s Face</string>
    <string name="bidAmount">99.99$</string>
    <string name="itemImageDesc">Item Name</string>
    <string name="report">Report</string>
    <string name="comments">Comments</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Feed</item>
        <item>Auction House</item>
        <item>Profile</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_auth">Metropolis</string>
    <string name="title_activity_comments">Comments</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>