<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/registerUsername"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/registerPassword"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/registerEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:onClick="register" />
    
    <Button
        android:id="@+id/registerLogin"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:onClick="switchFragments" />

</RelativeLayout>