<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/loginUsername"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:onClick="login"
        android:text="@string/login" />

    <Button
        android:id="@+id/loginRegister"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="switchFragments"
        android:text="@string/register" />


</RelativeLayout>